doing db testing
